bad/assign_arr_length_class.example_compiler_output
ERROR
[1mbad/assign_arr_length_class.lat:6:22: [1;31merror: [0;1mleft side is not assignable[m
	(new int[3]).length = new Y;
	                    [1;32m^[m
[1mbad/assign_arr_length_class.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	(new int[3]).length = new Y;
	[1;32m^[m
